--- a/demo/vue-viewer/public/index.html
+++ b/demo/vue-viewer/public/index.html
@@ -10,10 +10,10 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
 		/>
-		<link
+		<!--link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
-		/>
+		/-->
 		<link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet" />
 	</head>
 	<body>
