--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   <script>
     window.$docsify = {
       name: 'parsr',
-      repo: 'ssh://git@github.com/axa-group/Parsr'
+      repo: 'https://github.com/axa-group/Parsr',
+      logo: 'logo.png',
+      loadNavbar: true,
+      mergeNavbar: true,
+      maxLevel: 2,
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
