--- a/index.html
+++ b/index.html
@@ -1,25 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>parsr - Turn your documents into data!</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Turn your documents into data!">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
-</head>
-<body>
-  <div id="app"></div>
-  <script>
-    window.$docsify = {
-      name: 'parsr',
-      repo: 'https://github.com/axa-group/Parsr',
-      logo: 'logo.png',
-      loadNavbar: true,
-      mergeNavbar: true,
-      maxLevel: 2,
-    }
-  </script>
-  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-</body>
-</html>
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>parsr - Turn your documents into data!</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="description" content="Turn your documents into data!">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    <script>
+      window.$docsify = {
+        name: 'parsr',
+        repo: 'https://github.com/axa-group/Parsr',
+        logo: 'logo.png',
+        loadNavbar: true,
+        mergeNavbar: true,
+        maxLevel: 2,
+        coverpage: true,
+        // themeColor: '#3F51B5',
+        // complete configuration parameters
+        search: {
+          maxAge: 86400000, // Expiration time, the default one day
+          paths: 'auto',
+          placeholder: 'Type to search',
+          // Localization
+          placeholder: {
+            '/README_zh-cn': '搜索',
+            '/': 'Type to search'
+          },
+          noData: 'No Results!',
+          // Localization
+          noData: {
+            '/README_zh-cn': '找不到结果',
+            '/': 'No Results'
+          },
+          // Headline depth, 1 - 6
+          depth: 2,
+          hideOtherSidebarContent: false, // whether or not to hide other sidebar content
+          // To avoid search index collision
+          // between multiple websites under the same domain
+          namespace: 'website-1',
+        }
+      }
+    </script>
+    <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+    <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
+  </body>
+  </html>
