--- a/demo/doc-versioning/doc_versioning/gui/index.html
+++ b/demo/doc-versioning/doc_versioning/gui/index.html
@@ -77,10 +77,10 @@
                 if (this.responseText) {
                     var response = JSON.parse(this.responseText);
                     if (response.status === 'ok') {
-                        document.getElementById("magic_container").innerHTML = "🧐 Analysing Hold them horses...";
+                        document.getElementById("magic_container").innerHTML = "🧐 Analysing. Hold them horses...";
                         pollServerForRequest(response.result.server_response)
                     } else {
-                        document.getElementById("magic_container").innerHTML = response.error;                        
+                        document.getElementById("magic_container").innerHTML = response.error;
                     }
                 }
             }
@@ -94,10 +94,15 @@
                     var response = JSON.parse(this.responseText);
                     if (response.status === 'ok') {
                         document.getElementById("magic_container").innerHTML = "😄 Analysed! Let those horses go!";
+                        setTimeout(gotoDocument.bind(response.docName), 500);
                     } else {
-                        document.getElementById("magic_container").innerHTML = "an error..." + response.error;                        
+                        document.getElementById("magic_container").innerHTML = "an error..." + response.error;
                     }
-                }                
+                }
+            }
+
+            function gotoDocument(docName) {
+                doAjax(`/document/${docName}`, "POST", false);
             }
 
             function toggleFullscreen() {
